--- a/django/desktop/templates/desktop/index.html
+++ b/django/desktop/templates/desktop/index.html
@@ -63,6 +63,22 @@
     </label>
 </h3>
 
+<h3>
+    <input type="button" value="Requests -> Pyramid" onclick="mkRequest('/pyramid', 'pyramid-results')">
+    <label>
+        <span>Output</span>
+        <input type="text" id="pyramid-results">
+    </label>
+</h3>
+
+<h3>
+    <input type="button" value="Requests -> Tornado" onclick="mkRequest('/tornado', 'tornado-results')">
+    <label>
+        <span>Output</span>
+        <input type="text" id="tornado-results">
+    </label>
+</h3>
+
 </body>
 
 </html>
