add span start and end times

--- a/django/o11y/templates/o11y/traces.html
+++ b/django/o11y/templates/o11y/traces.html
@@ -49,6 +49,7 @@
                     {% for span in scope_span.span_set.all %}
                         <tr>
                             <td>{{ span.name }}</td>
+                            <td>{{ span.start_time }}</td>
                             <td>{{ span.get_kind_display }}</td>
                         </tr>
                     {% endfor %}
